Good good knocking off to-dos

--- a/scripts/178_new_F4__code_for_Figure_4.Rmd
+++ b/scripts/178_new_F4__code_for_Figure_4.Rmd
@@ -146,135 +146,149 @@ ggsave('../results//S12_genus_diversity_correlation_178.pdf',
 # 4B: the Enterococcus results
 
 ```{r}
-entero <- read_csv('../data/171_entero_model_fg_post_interaction.csv')  %>% 
-  select(starts_with('b_')) %>% 
-  gather('item', 'coeff') %>% 
-  mutate(item = str_replace(item, 'b_fg_',''),
-         item = str_replace(item, 'b_',''),
-         item = str_replace(item, 'intensity','')) %>% 
-   mutate(fgrp1 = case_when(
-    item ==  'milk' ~ '1',
-    item == 'meat' ~ '2',
-    item ==  'egg' ~ '3',
-    item ==  'legume' ~ '4',
-    item == 'grain' ~ '5',
-    item == 'fruit' ~ '6',
-    item == 'veggie' ~ '7',
-    item ==  'oils' ~ '8', 
-    item ==  'sweets' ~ '9'
-  ))  %>% 
-  left_join(key %>% select(fgrp1, color, shortname)) %>% 
-  mutate(shortname = case_when(
-        item ==  'milk_e' ~ 'abx * Milk',
-    item == 'meat_e' ~ 'abx * Meats',
-    item ==  'egg_e' ~ 'abx * Eggs',
-    item ==  'legume_e' ~ 'abx * Legumes',
-    item == 'grain_e' ~ 'abx * Grains',
-    item == 'fruit_e' ~ 'abx * Fruits',
-    item == 'veggie_e' ~ 'abx * Vegetables',
-    item ==  'oils_e' ~ 'abx * Oils', 
-    item ==  'sweets_e' ~ 'abx * Sweets',
-    item ==  'nonablative' ~ 'Nonablative',
-    item ==  'reduced' ~ 'Reduced',
-    item ==  'ablative' ~ 'Ablative',
-    item ==  'TPN' ~ 'TPN',
-    item ==  'EN' ~ 'EN',
-    item ==  'abx' ~ 'abx',
-    TRUE ~ `shortname`
-  )) %>% 
-  filter(! shortname %in% c('Nonablative','Reduced','Ablative'))
-
-entero %>% 
-  distinct(shortname) %>% pull(shortname)
-entero %>% 
-  distinct(item) %>% pull(item)
+library(tidyverse)
+library(cowplot)
+library(broom.mixed)
+library(brms)   
+library(ggpubr)
+library(tidybayes)
+library(brmstools)
+library(bayesplot)
+library(gt)
+library(rcompanion)
+library(janitor)
+library(ggtext)
+rstan::rstan_options(auto_write = TRUE)
+theme_set(theme_tidybayes() + panel_border())
 ```
 
 ```{r}
-# deciding on how to order these terms 
-# find the q25 of the coeffs
-fg_order <- entero %>% filter(str_detect(item, '_e$')) %>% 
-  group_by(shortname) %>% 
-  tidybayes::median_qi(coeff , .width = c( .66)) %>% 
-  arrange(.lower) %>% pull(shortname)
+clr_res <- read_csv('../data/R29_all_ASV_CLR_counts.csv')
+
+meta <- read_csv('../data/153_combined_META.csv') %>% 
+  mutate(intensity = factor(intensity, levels = c('nonablative','reduced','ablative'))) %>%
+  mutate(pid = factor(pid)) %>%
+    # This divides all the new intake columns by 100.
+  mutate(across(starts_with("fg_"), ~ .x / 100)) |> 
+  full_join(clr_res |> select(sampleid, asv_1_clr = asv_1))
+
+all_food_vars <- meta %>% select(starts_with('fg')) %>% colnames()
+
+# Create the interaction terms for all food variables in this iteration
+interaction_terms <- paste(all_food_vars, "empirical", sep = ":")
+
+# Build the full formula string dynamically
+formula_string <- paste(
+  "asv_1_clr ~ 0 + intensity + empirical + TPN + EN  +",
+  paste(interaction_terms, collapse = " + "),
+  "+ (1 | pid) + (1 | timebin)"
+)
+
+# Convert the string to a formula object
+formula <- brms::bf(as.formula(formula_string))
+
+# Build the priors by adding them together.
+# This single prior() call applies to all coefficients listed in `all_food_coefs`.
+priors <-
+    prior(normal(0, 1), class = 'b') + # General prior for all food effects
+    # Specific priors that override the general one for non-food covariates
+    prior(normal(0, 0.1), class = 'b', coef = "TPNTRUE") +
+    prior(normal(0, 0.1), class = 'b', coef = "ENTRUE") +
+    prior(normal(0, 0.5), class = 'b', coef = "empiricalTRUE") 
+
+#Fit the model (using fewer iterations for this example to run quickly)
+model_fit <- brm(
+  formula = formula,
+  data = meta,
+  prior = priors,
+    warmup = 1000, iter = 3000,
+    chains = 4, cores = 4,
+    seed = 123,
+    silent = 2,
+  control = list(adapt_delta = 0.99)
+)
+
+results_df <- tidy(model_fit, conf.int = TRUE) %>%
+  mutate(conf.low = round(conf.low, 2),
+         conf.high = round(conf.high, 2))
 ```
+## forest figure 
 
 ```{r}
-total_order <- c('Vegetables','abx * Vegetables',
-                 'Oils','abx * Oils',
-                 'Fruits','abx * Fruits',
-                 'Meats','abx * Meats',
-                 'Legumes','abx * Legumes',
-                 'Eggs','abx * Eggs',
-                 'Milk','abx * Milk',
-                 'Grains','abx * Grains',
-                 'Sweets','abx * Sweets',
-                 "TPN" ,"EN" , 'abx')
-#tibble(ord = total_order) %>% write_csv('../data/178_coeff_order.csv')
-arrange_label <- tibble(ord = total_order) %>% 
-  mutate(shortname = str_replace(ord, 'abx \\+ ','')) %>% 
-  left_join(key %>% select(shortname, color)) %>% 
-  mutate(color = if_else(is.na(color), 'black', color))
+# the above figure but make it the way the other figure look like
+key <- read_csv('../data/food_group_color_key_final.csv', col_types = 'ccccc')
 
+replacement_dictionary <- setNames(key$shortname, key$fg1_name)
 
-# I need to create a data frame that has the coordinates of the rectangles that I wanna create
-interaction_terms <- tibble(
-  shortname = total_order
-) %>% 
-  mutate(ymin = seq(1, nrow(.)) - 0.5,
-         ymax = seq(1, nrow(.)) + 0.5) %>% 
-  filter(str_detect(shortname, '\\*')) %>% 
-  mutate(xmin = -Inf, xmax = Inf,
-         interaction_fill = 'interaction_fill')
+level_order <- rev(c(
+    "abx", "EN", "TPN", 
+    "abx * Sweets", "Sweets",
+    "abx * Grains", "Grains",
+    "abx * Milk", "Milk",
+    "abx * Eggs", "Eggs",
+    "abx * Legumes", "Legumes",
+    "abx * Meats", "Meats",
+    "abx * Fruits", "Fruits",
+    "abx * Oils", "Oils",
+    "abx * Vegetables", "Vegetables"
+))
 
-# this leaves me no choice but I need to fill the other blue area with the blue rectangles 
-blue_terms <- tibble(
-  shortname = total_order
-) %>% 
-  mutate(ymin = seq(1, nrow(.)) - 0.5,
-         ymax = seq(1, nrow(.)) + 0.5) %>% 
-  filter(!str_detect(shortname, '\\*')) %>% 
-  mutate(xmin = -Inf, xmax = Inf,
-         blue_fill = 'blue_fill')
+cleaned_effects <- results_df %>%
+  # Keep only the fixed effects
+  filter(effect == "fixed") %>%
+  # Create a new column to distinguish main effects from interactions
+  mutate(
+    effect_type = if_else(str_detect(term, ":"), "Interaction", "Main Effect"),
+    # Create clean labels for plotting
+    clean_term = term %>%
+      str_replace("empiricalTRUE$", "abx") %>%
+      str_remove_all("empiricalFALSE:|avg_intake_|TRUE$") %>%
+      str_replace_all( replacement_dictionary) %>%
+      str_replace("empiricalTRUE:", "abx * ") %>%
+      str_replace_all("_", " ") 
+  ) %>%
+  filter(!str_detect(clean_term, 'intensity')) %>%
+  # Create a new column to identify significant results
+  # The condition is TRUE if conf.low and conf.high have the same sign (i.e., don't cross zero)
+  mutate(is_significant = (conf.low * conf.high) > 0) %>%
+  mutate(clean_term = factor(clean_term, levels = level_order))
 
-# the credible interval for the entero caterpillar 
-entero %>% 
-  filter(item == 'sweets_e') %>% 
-  group_by(item) %>% 
-  tidybayes::median_qi(coeff , .width = c(.95)) %>% 
-  mutate(coeff = round(coeff, digits = 2), 
-         .lower = round(.lower, digits = 2), 
-         .upper = round(.upper, digits = 2) )
+shading_df <- cleaned_effects %>%
+  mutate(y_numeric = as.numeric(clean_term)) %>%
+  filter(str_detect(clean_term, "\\*")) # Filter for interaction terms
 
-cross0 <- entero %>%
-  group_by(item) %>% 
-  summarise(q2.5 = round(quantile(coeff, probs = 0.025), 1),
-            q97.5 = round(quantile(coeff, probs = 0.975), 1)) %>% 
-  mutate(Cross = if_else(q2.5 >= 0 | q97.5 <= 0, F, T))
-```
-
-## caterpilllar
-
-```{r}
-entero_panel <- entero %>%  
-  mutate(shortname = factor(shortname, levels = total_order)) %>% 
-  left_join(cross0) %>% 
-  ggplot() +
-  stat_pointinterval(aes(x = coeff, y = shortname, col = Cross),.width = .95, fatten_point = 1.2) +
-   geom_rect(data = interaction_terms, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, fill = interaction_fill), alpha = .1) +
-  geom_rect(data = blue_terms, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, fill = blue_fill) , alpha = .1) +
-  scale_fill_manual(values=c("interaction_fill" = "tan2", "blue_fill" = "#FAEFD1")) +
-  scale_color_manual(values = c("#EC0000", "black")) +
+plot_asv1 <- ggplot(cleaned_effects, aes(x = estimate, y = clean_term)) +
+  geom_rect(
+    data = shading_df,
+    aes(ymin = y_numeric - 0.5, ymax = y_numeric + 0.5, xmin = -Inf, xmax = Inf),
+    fill = "#FBEADC", # A light orange/peach color like the example
+    alpha = 0.7,
+    inherit.aes = FALSE
+   ) +
+   # Add a vertical line at zero, which represents "no effect"
+  geom_vline(xintercept = 0, linetype = "solid", color = "blue",size = 0.8) +
+   # Use geom_pointrange to show the estimate (point) and confidence interval (line)
+   geom_pointrange(
+   aes(xmin = conf.low, xmax = conf.high, color = is_significant),
+     size = 0.25,linewidth = 1,
+  ) +
+  scale_color_manual(
+    values = c(
+      "TRUE" = "red",
+      "FALSE" = "black"
+    ), name = "Effect Status" # Legend title
+  ) +
   scale_y_discrete( labels = function(x) { ifelse(str_detect(x, '\\*'),  str_glue("<b style='color:royalblue'>{x}</b>"), as.character(x)) }) +
-  geom_vline(xintercept = 0, col = 'blue', size = zero_line_size) +
-  labs(x = 'CLR(Enterococcus) change', y = '') +
+  # Add labels and a clean theme
+  labs(
+    x = "CLR(ASV 1) change",
+    y = ''
+  ) +
   theme_classic() +
-  theme(legend.position = 'none') +
-  theme( plot.background = element_rect(fill='transparent', color=NA), 
-        axis.text.y = element_markdown(),
-        axis.title=element_text(size=10), aspect.ratio=1.3 )
+  theme(legend.position = "none", axis.text.y = element_markdown(), axis.text=element_text(size=10),axis.title=element_text(size=10),
+         aspect.ratio=1.3)
 
-entero_panel  
+plot_asv1
 ```
 
 # 4C: the mouse experiment   
@@ -460,7 +474,7 @@ title <- ggdraw() +
   )
 
 
-f3 <- plot_grid(correbar, entero_panel,f3_days, f3_AUC, label_size = 12, ncol = 1,labels = c('A','B','C', NA),
+f3 <- plot_grid(correbar, plot_asv1,f3_days, f3_AUC, label_size = 12, ncol = 1,labels = c('A','B','C', NA),
                 align = 'vh', axis = 'lrtb', rel_heights = c(1,1.55,1, 0.55))
 
  
@@ -471,7 +485,10 @@ combined <- plot_grid(
   rel_heights = c(0.05, 1)
 )+theme(plot.margin = unit(c(1,9,2,1), "cm"))
 
-ggsave('../results/F4_current_178_changing.pdf',
+# ggsave('../results/F4_current_178_changing.pdf',
+#       width = 210, height = 297, units = "mm", device = 'pdf', plot = combined, dpi = 300)
+
+ggsave('../data/178_F4_current_new.pdf',
       width = 210, height = 297, units = "mm", device = 'pdf', plot = combined, dpi = 300)
 ```
 
